# dental_booking_test

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.js  config.js  db.js  index.js
backend/src/middleware/: auth.js  rateLimiter.js
backend/src/routes/: auth.js  chat.js  chatbot.js
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
client/app/: globals.css  layout.tsx  page.tsx
client/app/(auth)/login/: page.tsx
client/app/chat/: page.tsx
client/components/: ChatWindow.tsx  MessageBubble.tsx  Navbar.tsx  Providers.tsx
client/context/: AuthContext.tsx
postgres scripts/: sample_data.sql  schema.sql
python-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
python-service/app/: api.py  db.py  main.py  models.py
python-service/app/core/: config.py
python-service/app/services/: llm.py  rules.py  scheduling.py  sessions.py
python-service/dental_python_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
